--- a/css/main.scss
+++ b/css/main.scss
@@ -989,9 +989,15 @@ hr{
     &_big{
         width: 600px;
         text-align: left;
-        h3{
-            margin-bottom: 20px;
+        h3, h4{
+            margin: 20px 0;
             font-weight: 700;
+        }
+        li{
+            margin: 20px 0;
+        }
+        b{
+            font-weight: 500;
         }
     }
 }
