--- a/css/main.scss
+++ b/css/main.scss
@@ -988,6 +988,7 @@ hr{
     }
     &_big{
         width: 600px;
+        max-width: 90%;
         text-align: left;
         h3, h4{
             margin: 20px 0;
