--- a/css/main.scss
+++ b/css/main.scss
@@ -995,7 +995,7 @@ hr{
             font-weight: 700;
         }
         li{
-            margin: 20px 0;
+            margin: 20px 0 !important;
         }
         b{
             font-weight: 500;
